voctomix-outcasts (0.5.0-1) UNRELEASED; urgency=medium

  * New upstream release.
    - .ts videos are now ingestible (and loopable).
    - New command: votolight for running tally-lights.
  * Update copyright.
  * Bump Standards-Version to 4.1.1, no changes needed.
  * Declare Rules-Requires-Root: no

 -- Stefano Rivera <stefanor@debian.org>  Sat, 25 Nov 2017 10:34:02 +0000

voctomix-outcasts (0.4.2-1) unstable; urgency=medium

  * New upstream bugfix release.
    - PNG sequences should now loop.
  * Recommends: gstreamer1.0-x, for overlaying timestamps on video.
  * Bump Standards-Version to 4.0.0, no changes needed.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 04 Aug 2017 22:21:53 -0400

voctomix-outcasts (0.4.1-1) unstable; urgency=medium

  * New upstream bugfix release.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 11 Jan 2017 23:16:40 +1100

voctomix-outcasts (0.4-1) unstable; urgency=medium

  * New upstream release.
  * Add watch file.
  * Bump copyright years.
  * Add myself to uploaders.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 11 Jan 2017 20:42:31 +1100

voctomix-outcasts (0.3+git20161201-1) unstable; urgency=medium

  [ Holger Levsen ]
  * New upstream git revision.

  [ Stefano Rivera ]
  * Use https for Vcs-Git URL.
  * debian/copyright: fix license name, it's called Expat.
  * wrap-and-sort debian/(control|copyright|voctomix-outcasts.(install|links))

 -- Holger Levsen <holger@debian.org>  Fri, 02 Dec 2016 09:41:18 +0100

voctomix-outcasts (0.3+git20161119-2) unstable; urgency=medium

  * Correctly attribute Ryan Vermer in debian/copyright. (Closes: #845065)

 -- Holger Levsen <holger@debian.org>  Sun, 20 Nov 2016 11:08:29 +0100

voctomix-outcasts (0.3+git20161119-1) unstable; urgency=medium

  * Initial upload. (Closes: #833700)
  * Use arbitrary version number which is higher than 0.3 as CarlFK (upstream)
    hasn't done any release yet but used version numbers for his local
    releases…
